{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 148,
  "lineage": "0ce4eb78-bf38-f480-0cda-0f859f0e8897",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "static_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0609398cee07eaae3",
            "public_dns": "ec2-52-39-96-192.us-west-2.compute.amazonaws.com",
            "public_ip": "52.39.96.192",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f2f779464715dc5",
            "arn": "arn:aws:ec2:us-west-2:392989395552:instance/i-0682ec5965e8e6dd4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0682ec5965e8e6dd4",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "nmysore",
            "monitoring": false,
            "primary_network_interface_id": "eni-052a74f68fabb4fab",
            "private_dns": "ip-10-0-1-163.us-west-2.compute.internal",
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-35-162-46-174.us-west-2.compute.amazonaws.com",
            "public_ip": "35.162.46.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ac2c4a9f7b90ecf8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02da57061df7147e7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb83a9c2fbc6aa33"
            ]
          },
          "depends_on": [
            "aws_security_group.My_VPC_Security_Group",
            "aws_subnet.My_VPC_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My_VPC_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ee74957d027941e3",
            "owner_id": "392989395552",
            "vpc_id": "vpc-0e87f21dbcfe4f210"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "My_VPC_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee74957d027941e3",
            "id": "r-rtb-0829ea26193e8bf4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0829ea26193e8bf4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.My_VPC_GW",
            "aws_route_table.My_VPC_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My_VPC_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0829ea26193e8bf4c",
            "owner_id": "392989395552",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0e87f21dbcfe4f210"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027caccaea7884a49",
            "route_table_id": "rtb-0829ea26193e8bf4c",
            "subnet_id": "subnet-02da57061df7147e7"
          },
          "depends_on": [
            "aws_route_table.My_VPC_route_table",
            "aws_subnet.My_VPC_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:392989395552:security-group/sg-0eb83a9c2fbc6aa33",
            "description": "My VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb83a9c2fbc6aa33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "My VPC Security Group",
            "name_prefix": null,
            "owner_id": "392989395552",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e87f21dbcfe4f210"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My_VPC_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:392989395552:subnet/subnet-02da57061df7147e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02da57061df7147e7",
            "map_public_ip_on_launch": true,
            "owner_id": "392989395552",
            "vpc_id": "vpc-0e87f21dbcfe4f210"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:392989395552:vpc/vpc-0e87f21dbcfe4f210",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034afdddeb6b7589f",
            "default_route_table_id": "rtb-0520da54dad2f0323",
            "default_security_group_id": "sg-05a341918e106a169",
            "dhcp_options_id": "dopt-8dacbfef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e87f21dbcfe4f210",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0520da54dad2f0323",
            "owner_id": "392989395552"
          }
        }
      ]
    }
  ]
}